--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,6 @@ sonar.projectKey=Startup_Platform
 sonar.projectName=FinalProject
 sonar.projectVersion=1.0
 sonar.sources=src/main
+sonar.tests=src/test
+sonar.log.level=DEBUG
+
