--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,9 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
+                <configuration>
+                    <repoToken>ZoYO92McbnsRoG9GE3SYDvXswrhYo8FYW</repoToken>
+                </configuration>
             </plugin>
 
             <plugin>
