--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,12 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.8</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/net.greatstart/**</exclude>
-                    </excludes>
-                </configuration>
+                <!--<version>0.7.8</version>-->
+                <!--<configuration>-->
+                    <!--<excludes>-->
+                        <!--<exclude>**/net.greatstart/**</exclude>-->
+                    <!--</excludes>-->
+                <!--</configuration>-->
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
