--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ cache:
     - $HOME/.sonar
 
 script:
-  - mvn clean test jacoco:report coveralls:report
-  - sonar-scanner -X
+- mvn clean test
+#  - mvn clean test jacoco:report coveralls:report
+#  - sonar-scanner -X
