--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
                 <!--</configuration>-->
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
+                        <id>jacoco-initialize</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
