--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,23 @@ Icon
 # Thumbnails
 ._*
 
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsdx
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
