--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,7 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
+# Check
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
