--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
+#spring.datasource.url: jdbc:postgresql://localhost:5432/startup?autoReconnect=true&useSSL=false
+#spring.datasource.username: postgres
+#spring.datasource.password: oot
