--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/startup?autoReconnect=true&useSSL=false
+jdbc.url=jdbc:postgresql://localhost:5432/startup
 jdbc.username=postgres
 jdbc.password=root
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql=true
+hibernate.default_schema=startup_platform
