--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ cache:
   directories:
     - $HOME/.m2
     - $HOME/.sonar
+before_install:
+ - chmod +x travis.sh
 
 before_script: "./travis.sh"
 
