--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ cache:
     - $HOME/.m2
     - $HOME/.sonar
 
+before-script: "./travis.sh"
+
 script:
   - mvn clean test jacoco:report coveralls:report
   - sonar-scanner
