--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,9 @@ cache:
     - $HOME/.m2
     - $HOME/.sonar
 
-before_install:
-  - chmod +x travis.sh
-
-before_script: "./travis.sh"
+before_script:
+- chmod +x travis.sh
+"./travis.sh"
 
 script:
   - mvn clean test jacoco:report coveralls:report
