--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>1.16.16</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
