--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+        </dependency>
+
 
     </dependencies>
 
