--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
             <version>${flyway-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>jstl</groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
         <dependency>
