[#19] added InvestmentInterest entity(rebase onto from master branch and add file Add__descrip_goal.sql file)

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/StartupPlatform
 jdbc.username=postgres
-jdbc.password=
+jdbc.password=nutshell
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql=true
 hibernate.default_schema=startup_platform
