--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <java.version>1.8</java.version>
         <!--Project dependencies, that differs from spring-boot-starter standard versions-->
         <flyway-core.version>4.2.0</flyway-core.version>
+        <hibernate-core.version>5.2.10.Final</hibernate-core.version>
     </properties>
 
     <dependencies>
@@ -29,8 +30,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -43,6 +52,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
+            <version>${hibernate-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
