--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/postgress
+jdbc.url=jdbc:postgresql://localhost:5432/postgres
 jdbc.username=postgres
-jdbc.password=root
+jdbc.password=
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql=true
 hibernate.default_schema=startup_platform
