--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.8</version>
+                <configuration>
+                <excludes>
+                    <exclude>**/model/**</exclude>
+                </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
