--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 security.basic.enabled=false
-spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.properties.hibernate.default_schema=startup_platform
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
