--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
                 <configuration>
                 <excludes>
                     <exclude>**/model/**</exclude>
+                    <exclude>**/dto/**</exclude>
                 </excludes>
                 </configuration>
                 <executions>
