removed Main class from jacoco's report

--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
                     <exclude>**/model/**</exclude>
                     <exclude>**/dto/**</exclude>
                     <exclude>**/configs/**</exclude>
-                    <exclude>**/Main.java</exclude>
+                    <exclude>**/*Main.java</exclude>
                 </excludes>
                 </configuration>
                 <executions>
