fixec unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
                 <configuration>
                 <excludes>
                     <exclude>**/configs/**</exclude>
-                    <exclude>**/*Main.java</exclude>
+                    <exclude>**/*Main.*</exclude>
                 </excludes>
                 </configuration>
                 <executions>
