added mail properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.http.multipart.max-file-size: 10MB
 spring.http.multipart.max-request-size: 10MB
 
 support.email: support@greatstart.com
+
+spring.mail.host=smtp.meta.ua
+spring.mail.port=465
+spring.mail.username=GreatStartSupport@meta.ua
+spring.mail.password=metaPassword
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+spring.mail.test-connection=true
