added email validation sendEmail throws exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
@@ -13,9 +14,7 @@ support.email: support@greatstart.com
 
 spring.mail.host=smtp.meta.ua
 spring.mail.port=465
-spring.mail.username=GreatStartSupport@meta.ua
+spring.mail.username=GreatStartSupport@mail.ru
 spring.mail.password=metaPassword
 spring.mail.properties.mail.smtp.ssl.enable=true
-
-
 spring.mail.test-connection=true
