added some unit tests and refactored a lil bit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=root
 security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
 spring.jpa.hibernate.ddl-auto=update
+flyway.schemas=startup_platform
 
 spring.messages.basename=MessagesBundle
 
