changed mail address configured security via method annotations refactored

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.password=root
 security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
 spring.jpa.hibernate.ddl-auto=update
-flyway.schemas=startup_platform
 
 spring.messages.basename=MessagesBundle
 
@@ -13,11 +12,11 @@ spring.mvc.view.suffix: .jsp
 spring.http.multipart.max-file-size: 10MB
 spring.http.multipart.max-request-size: 10MB
 
-support.email: GreatStartSupport@meta.ua
+support.email: GS.Support@meta.ua
 
 spring.mail.host=smtp.meta.ua
 spring.mail.port=465
-spring.mail.username=GreatStartSupport@meta.ua
+spring.mail.username=GS.Support@meta.ua
 spring.mail.password=metaPassword
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.test-connection=true
