--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.mail.port=465
 spring.mail.username=GS.Support@meta.ua
 spring.mail.password=metaPassword
 spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.test-connection=true
+spring.mail.test-connection=false
