--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,4 @@
 password.size=Password must be between {min} and {max} characters long.
 email.valid=The email address must be valid.
 name.size=Name must be between {min} and {max} characters long.
+project.cost.min=The total cost of a project must be at least 1000.
