Created DtoInvestment with Mapper, some changes in inv, project and inv_int fetchType (user field)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Startup_platform
 spring.datasource.username=postgres
 spring.datasource.password=root
 security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
 
 spring.messages.basename=MessagesBundle
 
