fixed JavaMail issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ spring.mvc.view.suffix: .jsp
 spring.http.multipart.max-file-size: 10MB
 spring.http.multipart.max-request-size: 10MB
 
-support.email: GS.Support@meta.ua
+support.email: GreatStartSupport@ukr.net
 
-spring.mail.host=smtp.meta.ua
+spring.mail.host=smtp.ukr.net
 spring.mail.port=465
-spring.mail.username=GS.Support@meta.ua
+spring.mail.username=GreatStartSupport@ukr.net
 spring.mail.password=metaPassword
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.test-connection=true
