I guess it work!!

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,15 +42,11 @@ server:
 ---
 spring:
   profiles: default
-#  datasource:
-#    url: jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#    driverClassName: org.h2.Driver
-#    username: sa
-#    password:
-#  jpa:
-#    database-platform: org.hibernate.dialect.H2Dialect
-#    hibernate:
-#      ddl-auto: create-drop
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
 server:
   port: 9001
 
