Project page totally mapped

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Startup_platform
+spring.datasource.url=jdbc:postgresql://localhost:5432/startup_platform
 spring.datasource.username=postgres
 spring.datasource.password=root
 security.basic.enabled=false
@@ -19,5 +19,5 @@ spring.mail.host=smtp.meta.ua
 spring.mail.port=465
 spring.mail.username=GS.Support@meta.ua
 spring.mail.password=metaPassword
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.test-connection=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.test-connection=false
