#72 migrate forgot pass to angular (#63)
* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* [#4],[#6] REFACTOR

* Added PasswordReset controller and service on front - end

* BE controller returns status and FE parses it

* modal forgotPassword works

* fixed JavaMail issues

* token validation works

* finished

* removed user authority "change password"
token is now validated when submitting new password

* updated PasswordResetControllerTests(all tests) and SecurityServiceTest(getUserByToken)

* replaced meta mail with Ukr net

* replaced Ukr.net with Gmail

* fixed mail address

* login modal closes when forgot pass modal opens

* added "close" button to ForgotPassword.html that appears after successful email sending

* removed business logic from PasswordResetController on Java
status messages are now generated by the front-end controller
updates unit tests

* fixed sonar issue in PasswordResetCOntroller.js

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,20 +6,21 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   mail:
-    host: smtp.meta.ua
-    port: 465
-    username: GS.Support@meta.ua
+    host: smtp.gmail.com
+    port: 587
+    username: greatstartmail@gmail.com
     password: metaPassword
-    properties:
-      mail:
-        smptp:
-          ssl:
-            enable: true
-    test-connection: false
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
+    test-connection: true
   messages:
     basename: MessagesBundle
 support:
-  email: GS.Support@meta.ua
+  email: greatstartmail@gmail.com
 
 ---
 spring:
