Migrate investments to angular (#59)
* Created DtoInvestment with Mapper, some changes in inv, project and inv_int fetchType (user field)

* add investment link into index.html, some minor changes in test and service

* add investments page for inserting in user and project pages. Connected to controller.

* some design and checkstyle fix

* UserInvestments, ProjectInvestments, Investments pages add, test fix, controller Investment fix

* rename investments pages for user and project, add btns to investments, add methods to investment controller, implemented delete functionality

* Add mapping for investments list in project.

* Add mapping for investments list in project. Add project page. Mapped to controller, add modal.

* Project page totally mapped

* Some design remarks, copied addInvestment page into static, add owner to DtoProject

* Add DtoInvestments to DtoUserProfile

* Add investments in UserPage. Add ignore user photo and project image on mapping

* Some design marks in user page. User Page done.

* Modal window add

* Add create investment modal window with data binding, implement transfer from approve model window to create investment modal window

* some minor changes

* some minor changes

* modal windows work, refactor investment controller, delete application properties

* Add investment functionality 405 error

* Rename methods in UserService, add implementation of add investment

* add investment works!!!!

* h2 db

* investment Service and controller refactor, set currency filter on all money fields

* Mapper helper refactoring

* Add overrided methods equals() and hashcode() to project, user and investment models and dto

* add test and minor remarks in UserProfileMapperTest

* sonar fix in UserControllerTest

* Add @ToString, @EqualsAndHashCode to project, user and investment models and dtos

* Remove CycleAvoidingMappingContext, remove getAllInvestments method

* InvestmentMapper add 

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,9 @@ spring:
     properties:
       hibernate:
         default_schema: startup_platform
+security:
+  enable-csrf: false
 server:
   port: 9001
+
 
