Projects in Angular (#65)
* Created DtoInvestment with Mapper, some changes in inv, project and inv_int fetchType (user field)

* add investment link into index.html, some minor changes in test and service

* add investments page for inserting in user and project pages. Connected to controller.

* some design and checkstyle fix

* UserInvestments, ProjectInvestments, Investments pages add, test fix, controller Investment fix

* rename investments pages for user and project, add btns to investments, add methods to investment controller, implemented delete functionality

* Add mapping for investments list in project.

* Add mapping for investments list in project. Add project page. Mapped to controller, add modal.

* Project page totally mapped

* Projects in Angular

* Projects in Angular

* Some design remarks, copied addInvestment page into static, add owner to DtoProject

* Projects in Angular

* Add DtoInvestments to DtoUserProfile

* Add investments in UserPage. Add ignore user photo and project image on mapping

* Some design marks in user page. User Page done.

* Modal window add

* Edit project basics

* Add create investment modal window with data binding, implement transfer from approve model window to create investment modal window

* some minor changes

* Edit project images

* some minor changes

* Edit project images

* modal windows work, refactor investment controller, delete application properties

* Add investment functionality 405 error

* Rename methods in UserService, add implementation of add investment

* Basic form validation

* add investment works!!!!

* h2 db

* investment Service and controller refactor, set currency filter on all money fields

* Mapper helper refactoring

* Basic form validation

* Add overrided methods equals() and hashcode() to project, user and investment models and dto

* add test and minor remarks in UserProfileMapperTest

* sonar fix in UserControll

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: default
+    active: prod
   http:
     multipart:
       max-file-size: 10MB
@@ -50,6 +50,7 @@ spring:
     properties:
       hibernate:
         default_schema: startup_platform
+
 security:
   enable-csrf: false
 server:
